Ahora sí funciona lmao

--- a/lang/es.json
+++ b/lang/es.json
@@ -116,7 +116,7 @@
       "str": "Fuerza",
       "per": "Percepción",
       "ref": "Reflejos",
-      "awa": "Consciencia",
+      "awa": "Empatía",
       "agi": "Agilidad",
       "int": "Inteligencia",
       "wounds": "Heridas",
@@ -142,6 +142,7 @@
       "skills": "Habilidades",
       "addSkill": "Añadir habilidad",
       "skillName": "Nombre habilidad",
+      "gloryName": "Titulo",
       "edit": "Editar",
       "delete": "Borrar",
       "weapons": "Armas",
@@ -160,6 +161,8 @@
       "advantages": "Ventajas",
       "disadvantage": "Desventaja",
       "disadvantages": "Desventajas",
+      "glory": "Gloria",
+      "glories": "Glorias",
       "kata": "Kata",
       "katas": "Katas",
       "kiho": "Kiho",
@@ -167,6 +170,7 @@
       "addTech": "Añadir técnica",
       "addSpell": "Añadir conjuro",
       "addAdv/Dis": "Añadir ventaja/desventaja",
+      "addGlorie": "Añadir Gloria",
       "shugenja": "Shugenja",
       "equipment": "Equipamiento",
       "rulesSummary": "Resumen Reglas",
